# ai-dev-tools-zoomcamp

./: .gitignore  CLAUDE.md  README.md  WARP.md
01-overview/: Makefile  PROJECT_README.md  README.md  homework.md  pyproject.toml  pytest.ini  spec.md
01-overview/todo_project/: settings.py  urls.py
01-overview/todos/: admin.py  models.py  tests.py  urls.py  views.py
01-overview/todos/migrations/: 0001_initial.py  0002_todo_due_date.py
01-overview/todos/templates/todos/: base.html  todo_confirm_delete.html  todo_detail.html  todo_form.html  todo_list.html
