[project]
name = "01-overview"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.8",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "ipython>=8.37.0",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "ruff>=0.14.6",
]
